--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,8 @@
         android:layout_marginBottom="5dp"
         android:background="@color/white"
         android:hint="Search for a movie..."
-        android:padding="10dp" />
+        android:padding="10dp"
+        android:focusable="true" android:focusableInTouchMode="true"/>
 
     <ProgressBar
         android:id="@+id/progressBar"
