--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.example.toshiba.moviedb.MainActivity">
+    tools:context="com.example.toshiba.moviedb.MainActivity"
+    android:focusable="true"
+    android:focusableInTouchMode="true">
 <RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
@@ -17,7 +19,7 @@
         android:background="@color/white"
         android:hint="Search for a movie..."
         android:padding="10dp"
-        android:focusable="true" android:focusableInTouchMode="true"/>
+        />
 
     <ProgressBar
         android:id="@+id/progressBar"
