--- a/app/src/main/res/layout/activity_movie_info.xml
+++ b/app/src/main/res/layout/activity_movie_info.xml
@@ -116,7 +116,8 @@
                         android:id="@+id/tvCast1"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textColor="@color/black"/>
+                        android:textColor="@color/black"
+                        android:padding="5dp"/>
                 </LinearLayout>
 
                 <LinearLayout
@@ -135,7 +136,8 @@
                         android:id="@+id/tvCast2"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textColor="@color/black"/>
+                        android:textColor="@color/black"
+                        android:padding="5dp"/>
                 </LinearLayout>
 
                 <LinearLayout
@@ -154,7 +156,8 @@
                         android:id="@+id/tvCast3"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textColor="@color/black"/>
+                        android:textColor="@color/black"
+                        android:padding="5dp"/>
 
 
                 </LinearLayout>
